--- a/css/style.css
+++ b/css/style.css
@@ -1525,6 +1525,7 @@ footer #search-panel {
 }
 footer .search-box {
   position: relative;
+  transition: 0.3s ease-in-out;
   width: 300px;
 }
 footer .search-icon {
@@ -1775,6 +1776,9 @@ footer .copyright-text {
     transition: 0.3s ease-in-out;
     z-index: 9;
     height: 1px;
+    -webkit-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
   }
   header.mobile .search-box .search-field {
     position: absolute;
@@ -2273,6 +2277,8 @@ footer .copyright-text {
     z-index: 12;
     padding: 1em;
     bottom: 10px;
+    transition: 0.3s ease-in-out;
+    opacity: 0;
     -webkit-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
